src/bootstrap/test/v0_6/rejects/03_propagate_mismatched_e/main.zg
# requires: v0.6

fn inner() -> Result[int, str] {
    return Result.Err("io")
}

fn outer() -> Result[str, int] {
    let v := inner()?
    return Result.Ok("got")
}

print outer()
